# cmake_test

./: README.md
test1/: CMakeLists.txt  main.c
test1/operation/: CMakeLists.txt  example.c
test1/operation/inc/: public.h
test1/operation/src/: add.c  devide.c  multiply.c  subtract.c
